# FluxMD-simulation

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Benzene.pdb.pdbqt  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  FIX_N_WORKERS_ISSUE.md  GPU_OPTIMIZATION_SUMMARY.md  MANIFEST.in  OPTIMIZATION_SUMMARY.md  PACKAGE_STRUCTURE.md  PRE_RELEASE_CHECKLIST.md  README.md  REFACTORING_GUIDE.md  UMA_OPTIMIZATION_GUIDE.md  __main__.py  check_gpu.py  dna_builder.py  dna_to_pdb.py  fix_pi_stacking.py  flux_analyzer.py  flux_analyzer_backup.py  fluxmd.py  fluxmd_mathematical_framework.tex  fluxmd_uma.py  fluxmd_uma_interactive.py  gpu_accelerated_flux.py  intra_protein_interactions.py  mkdocs.yml  protonation_aware_interactions.py  pymol_colorflux.py  pymol_example_usage.md  pymol_fluxload.py  pymol_multiflux.py  pyproject.toml  pytest.ini  requirements-dev.txt  (+6 more)
.github/: ci-environment.yml
.github/workflows/: ci.yml
benchmarks/: README.md  bench_baseline.json  bench_baseline.json.old  bench_current.json  benchmark_uma.py
ci/: agents.md
docs/: ARCHITECTURAL_REVIEW.md  DEBUGGING_CI.md  PHYSICS_FIXES_SUMMARY.md  algorithms.md  index.md  readme_overview.md
docs/archive/: PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md
examples/: README.md  basic_usage.py
fluxmd/: __init__.py  __version__.py  cli.py
fluxmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fluxmd/analysis/: __init__.py  flux_analyzer.py  flux_analyzer_uma.py  signed_flux_analyzer.py  tmi_README.md
fluxmd/core/: MATRYOSHKA_README.md  __init__.py  conftest.py  cylindrical_sampler.py  energy_config.py  intelligent_cocoon_sampler.py  intra_protein_interactions.py  matryoshka_generator.py  protein_dna_uma.py  protein_dna_workflow.py  protonation_aware_interactions.py  ref15_energy.py  ref15_params.py  rosetta_atom_types.py  trajectory_generator.py  trajectory_generator_ref15.py  trajectory_generator_uma.py  trajectory_readme.md
fluxmd/core/dynamics/: __init__.py  brownian_roller.py
fluxmd/core/geometry/: __init__.py  pca_anchors.py
fluxmd/core/solvent/: __init__.py  hybrid_shell.py
fluxmd/core/surface/: __init__.py  dna_groove_detector.py  layer_stream.py  ses_builder.py
fluxmd/gpu/: __init__.py  baseline_modification_README.md  gpu_accelerated_flux.py  gpu_accelerated_flux_uma.py  ref15_energy_gpu.py
fluxmd/utils/: __init__.py  config_parser.py  cpu.py  dna_to_pdb.py  dna_to_pdb_v2.py  pdb_parser.py  smiles_to_pdb.py
fluxmd/visualization/: __init__.py  visualize_multiflux.py
preprint/Dataset (RAW)/ML162_GPX4_double/: ML162_GPX4_double_processed_flux_data.csv  ML162_GPX4_double_signed_flux_report_corrected.txt  all_iterations_flux.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Dataset (RAW)/ML162_GPX4_single/: ML162_GPX4_single_processed_flux_data.csv  ML162_GPX4_single_signed_flux_report_corrected.txt  all_iterations_flux.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Dataset (RAW)/ML162_GPX4_wt/: ML162_GPX4_wt_signed_flux_report_corrected.txt  ML162_GPX4_wtprocessed_flux_data.csv  all_iterations_flux.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Dataset (RAW)/TMT10_GPX4_double/: TMT10_GPX4_double_signed_flux_report_corrected.txt  all_iterations_flux.csv  processed_flux_data.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Dataset (RAW)/TMT10_GPX4_single/: TMT10_GPX4_single_signed_flux_report_corrected.txt  all_iterations_flux.csv  processed_flux_data.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Dataset (RAW)/TMT10_GPX4_wt/: TMT10_GPX4_wt_signed_flux_report_corrected.txt  all_iterations_flux.csv  processed_flux_data.csv  processed_flux_data_corrected.csv  simulation_parameters.txt
preprint/Datasets (Processed & ChemDraw)/: FluxMD_v3.ai
preprint/Datasets (Processed & ChemDraw)/chemdraw/: GPX4 Small Allosteric Inhibitors.cdxml
preprint/Datasets (Processed & ChemDraw)/matlab/: GPX4_RMSD_Barcode.m  generate_flux_barcodes.m
preprint/Datasets (Processed & ChemDraw)/outputs/: ML162.eps  ML162_annotated.eps  Si.eps  TMT10.eps  TMT10_annotated.eps  double_baseline.eps  figure 1.eps  figure 2.eps  figure2_SEM.eps  rmsd.eps  single_baseline.eps  wt_baseline.eps
preprint/Datasets (Processed & ChemDraw)/pymol/: PyMOL_Figure.pse
preprint/FluxMD v 1.3.0/: README.md  fluxmd.py  fluxmd_uma.py
preprint/FluxMD v 1.3.0/examples/: basic_usage.py  examples_README.md
preprint/FluxMD v 1.3.0/fluxmd/: __init__.py  __version__.py
preprint/FluxMD v 1.3.0/scripts/: process_completed_iterations.py
preprint/LaTeX/: SN_template_main.tex  reference.bib
sample_inputs/1_T4_Lysozyme_L99A_mut_benzene/: Benzene.pdbqt
scripts/: bench_runtime.py  benchmark_CAP.py  clean_output.py  compare_3dna.py  compare_benchmarks.py  continue_analysis.py  fix_bootstrap_error.py  gen_mock_data.py  migrate_to_package_structure.py  patch_flux_analyzer.py  plot_cylinder_sampling.py  process_completed_iterations.py  recovery_scripts_README.md  update_baseline.py  validation_express.py
tests/: conftest.py  perf_regression.py  test_brownian_roller.py  test_determinism.py  test_flux_analyzer_example.py  test_fluxmd_end2end.py  test_gpu_cutoffs.py  test_groove.py  test_layer_stream.py  test_matryoshka_benchmarks.py  test_matryoshka_integration.py  test_n_workers.py  test_n_workers_fix.py  test_parallel.py  test_parse_workers.py  test_pca_anchors.py  test_quat_util.py  test_ref15_zero_volume.py  test_sampling_cv.py  test_ses_builder.py  test_skeleton_imports.py  test_uma_optimization.py  test_workers.py  validate_matryoshka_physics.py
tests/data/: ligand.sdf  params.yaml
tests/science/: test_hybrid_shell.py  test_prion_protein.py
(+1492 files in other folders)
