[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmd"
dynamic = ["version"]
authors = [
    {name = "Myunghyun Jeong", email = "mhjonathan@gm.gist.ac.kr"},
]
description = "Energy Flux Differential Analysis for Protein-Ligand Binding Sites"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "biopython>=1.79",
    "torch>=2.0.0",
    "joblib>=1.0.0",
    "networkx>=2.8.0",
    "seaborn>=0.12.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",
    "pre-commit>=3.0",
]

[project.urls]
"Homepage" = "https://github.com/panelarin/FluxMD"
"Bug Reports" = "https://github.com/panelarin/FluxMD/issues"
"Documentation" = "https://github.com/panelarin/FluxMD#readme"
"Source" = "https://github.com/panelarin/FluxMD"

[project.scripts]
fluxmd = "fluxmd.cli:main"
fluxmd-uma = "fluxmd.cli:main_uma"
fluxmd-dna = "fluxmd.utils.dna_to_pdb_v2:main"

[tool.setuptools]
packages = ["fluxmd"]

[tool.setuptools.dynamic]
version = {attr = "fluxmd.__version__.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=fluxmd --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true