[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxmd"
dynamic = ["version"]
authors = [
    {name = "Myunghyun Jeong", email = "mhjonathan@gm.gist.ac.kr"},
]
description = "Energy Flux Differential Analysis for Protein-Ligand Binding Sites"
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "biopython>=1.79",
    "torch>=2.0.0",
    "joblib>=1.0.0",
    "networkx>=2.8.0",
    "seaborn>=0.12.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "scikit-image>=0.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.3",
    "pre-commit>=3.0",
    "ruff>=0.1.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.1.0",
    "py-spy>=0.3.14",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.1",
    "ipython>=8.12.0",
    "pdbpp>=0.10.3",
    "twine>=4.0.2",
    "build>=0.10.0",
]
gpu = [
    "torch>=2.0.0",
]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.12.0",
]

[project.urls]
"Homepage" = "https://github.com/panelarin/FluxMD"
"Bug Reports" = "https://github.com/panelarin/FluxMD/issues"
"Documentation" = "https://github.com/panelarin/FluxMD#readme"
"Source" = "https://github.com/panelarin/FluxMD"

[project.scripts]
fluxmd = "fluxmd.cli:main"
fluxmd-uma = "fluxmd.cli:main_uma"
fluxmd-dna = "fluxmd.utils.dna_to_pdb:main"

[tool.setuptools]
packages = ["fluxmd"]

[tool.setuptools.dynamic]
version = {attr = "fluxmd.__version__.__version__"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = 'fluxmd/_ARCHIVE_simplified_version/*'

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["fluxmd/_ARCHIVE_simplified_version/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503", "F401", "F841", "F821", "E402"]
extend-exclude = "fluxmd/_ARCHIVE_simplified_version/*"

[tool.ruff]
line-length = 100
extend-exclude = ["fluxmd/_ARCHIVE_simplified_version/*"]
extend-ignore = []
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
exclude = "fluxmd/_ARCHIVE_simplified_version/*"

ignore_errors = true

[tool.bandit]
exclude_dirs = ["fluxmd/_ARCHIVE_simplified_version/*"]
